<?xml version="1.0" encoding="UTF-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CustomCardView"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/adapter_student_libraryBook_nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/adapter_student_libraryBook_indicatorIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_open_book"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/adapter_student_examSchedule_subjectTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:textSize="@dimen/primaryText"
                android:gravity="start|center"
                android:layout_toStartOf="@+id/adapter_student_examSchedule_roomNoView"
                android:layout_toEndOf="@id/adapter_student_libraryBook_indicatorIV"
                android:padding="5dp"
                />

            <LinearLayout
                android:id="@+id/adapter_student_examSchedule_roomNoView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/transparent"
                android:layout_centerVertical="true"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_room"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostelRoomNo"
                    android:textColor="@color/textHeading"
                    android:layout_marginEnd="5dp"
                    android:textSize="@dimen/primaryText"
                    />

                <TextView
                    android:id="@+id/adapter_student_examSchedule_roomTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textHeading"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/primaryText"
                    />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/adapter_student_libraryBook_detailView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/adapter_student_libraryBook_nameView"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <!--AUTHOR NAME AND SUBJECT NAME VIEW STARTS-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                android:gravity="center"
                android:layout_margin="5dp"
                >

                <ImageView
                    android:id="@+id/adapter_student_examSchedule_calenderIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_calender"
                    android:layout_margin="5dp"
                    />

                <LinearLayout
                    android:id="@+id/adapter_student_examSchedule_dateLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_toEndOf="@+id/adapter_student_examSchedule_calenderIcon"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/secondaryText"
                        android:textColor="@color/textHeading"
                        android:textStyle="bold"
                        android:text="@string/date"/>

                    <TextView
                        android:id="@+id/adapter_student_examSchedule_dateTV"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:textSize="@dimen/secondaryText"
                        android:textColor="@color/textHeading"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_clock"
                    android:layout_margin="5dp"
                    android:layout_toStartOf="@+id/adapter_student_examSchedule_timeLay"
                    />

                <LinearLayout
                    android:id="@+id/adapter_student_examSchedule_timeLay"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/secondaryText"
                        android:textColor="@color/textHeading"
                        android:textStyle="bold"
                        android:text="@string/startEndTime"/>

                    <TextView
                        android:id="@+id/adapter_student_examSchedule_timeTV"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:textSize="@dimen/secondaryText"
                        android:textColor="@color/textHeading"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                </LinearLayout>

            </RelativeLayout>
            <!--AUTHOR NAME AND SUBJECT NAME VIEW ENDS-->





        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>

